[ntp4] Raise the priority of the 'hidden' attribute; fix visibility of the bookmarks title bar.
BUG=none
Review URL: http://codereview.chromium.org/7842001

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@99914 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: ea010614e6dc9c9e92fe0297a73a83366bc9390e

--- a/chrome/browser/resources/ntp4/new_tab.css
+++ b/chrome/browser/resources/ntp4/new_tab.css
@@ -22,7 +22,8 @@ body {
   -webkit-user-select: none;
 }
 
-.hidden {
+/* [hidden] does display:none, but its priority is too low in some cases. */
+[hidden], .hidden {
   display: none !important;
 }
 
